--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,6 +42,9 @@
     .blog .blog-card{
         flex-basis: 100%;
     }
+    .footer{
+        flex-wrap: wrap;
+    }
 }
 
 @media (min-width: 768px) and (max-width:1024px) {
