--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,13 @@ nav .nav-item{
     border-radius: var(--border-radius--sm);
     padding: 20px;
 }
+.comment .stars{
+    color: var(--color--gray-1);
+    padding-bottom: 10px;
+}
+.comment .stars .filled{
+    color: var(--color--primary-1);
+}
 .achievements{
     display: flex;
     padding: 30px;
@@ -527,7 +534,50 @@ nav .nav-item{
     position:absolute;
     inset: 0;
 }
+.contact-info{
+    display: flex;
+    gap:20px;
+    justify-content: space-evenly;
+    padding: 30px;
+    flex-wrap: wrap;
+}
+.info-piece{
+    flex:1;
+    padding:40px;
+    border-style: solid;
+    border-width: 3px 8px 8px 3px;
+    border-radius: var(--border-radius--border-radius);
+}
+.contact-icon-wrapper{
+    width: 60px;
+    height: 60px;
+    background-color: var(--color--primary-1);
+    color: var(--color--white);
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    border-radius: var(--border-radius--sm);
+}
+.contact-icon-wrapper i{
 
+}
+.info-link{
+    text-decoration:underline;
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+.info-link:hover{
+    color: var(--color--gray-1);
+}
+.follow-info i{
+    padding: 0px 5px;
+    color: var(--color--primary-3);
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+.follow-info i:hover{
+    opacity: 0.7;
+}
 /* FOOTER */
 footer{
     background-color: var(--color--primary-1);
@@ -572,6 +622,10 @@ footer .information .main-button{
     color:var(--color--white);    
     display: block;
     padding-top: 20px;
+    transition: all 0.3s ease;
+}
+.footer-contact .footer-contact-link:hover{
+    color: var(--color--primary-3);
 }
 .footer-contact .input-wrapper{
     position: relative;
