--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,41 @@
     --border-radius--sm: 15px;
     --color--gray-2: #f4f0d5;
     --color--primary-1: #1e3832;
+    --color--footer: #1e3832;
+    --color--footer-text: #ffffff;
     --color--white: white;
+    --color--black: black;
     --border-radius--border-radius: 30px;
     --color--primary-3: #f3b258;
     --border-radius--button: 50px;
     --color--primary-2: #2c160c;
     --border-radius--xs: 5px;
     --color--transparent: transparent;
+}
+:root[data-theme="dark"] {
+    --color--gray-3: #0f1f1b; 
+    --color--gray-2: #1a2e29;   
+    --color--gray-1: #9fb5ae; 
+
+    --color--primary-1: #e9f2ef;
+    --color--primary-2: #9fd8c7;
+    --color--primary-3: #9fcfbe;
+    --color--footer: #1e3832;
+    --color--footer-text: #ffffff;
+
+    --color--heading: var(--color--primary-1);
+    --color--white: black;
+    --color--black: white;
+
+
+    --color--transparent: transparent;
+
+    --font-family--body: Inter, sans-serif;
+    --font-family--heading: Anton, sans-serif;
+    --border-radius--sm: 15px;
+    --border-radius--border-radius: 30px;
+    --border-radius--button: 50px;
+    --border-radius--xs: 5px;
 }
 * {
   margin: 0;
@@ -25,6 +53,16 @@ body {
   background-color:var(--color--gray-3);
   font-size: 20px;
   font-family: var(--font-family--body);
+  transition: background-color 0.5s ease;
+}
+/* a[data-theme="dark"] {
+  color: #ffffff;
+} */
+:root[data-theme="dark"] body{
+    /* color:white; */
+}
+label{
+    color:var(--color--black);
 }
 ul{
     list-style:none;
@@ -40,6 +78,7 @@ h1,h2,h3,h4,h5{
     color: var(--color--primary-1);
     font-family: var(--font-family--heading);
     font-weight: 600px;
+    transition: color 0.5s ease;
 }
 p{
     color: var(--color--gray-1);
@@ -52,15 +91,28 @@ button{
 /* NAV */
 .nav-button{
     display: none;
-    background-color: var(--color--primary-3);
 }
-
+#theme-toggle{
+    margin:auto;
+    margin-right: 24px;
+    width: 40px;
+    height: 40px;
+}
+#theme-toggle i{
+    font-size: 30px;
+}
 nav{
     background-color: var(--color--primary-3);
+    display: flex;
+    align-items: flex-start;
+    transition: all 0.5s ease;
+}
+nav .nav-list{
+    width: fit-content;
 }
 nav .nav-item{
     display:inline-block;
-    padding: 24px 40px;
+    padding: 24px 20px;
 }
 .intro-wrapper{
     max-width: 600px;
@@ -268,6 +320,7 @@ nav .nav-item{
     margin: 20px auto;
     border-radius: var(--border-radius--sm);
     background-color: var(--color--gray-2);
+    transition: background-color 0.5s ease;
 }
 
 /* SERVICE (menu) */
@@ -343,16 +396,27 @@ nav .nav-item{
 .order label{
     width:100%;
 }
-.order .option{
-    margin:auto;    
+.order .option input{
+   width: fit-content;
 }
 .order .order-item{
-    flex: 0 0 30%;
+    margin-bottom: 30px;
+    /* text-align: center; */
+    flex: 0 0 25%;
 }
 .order .order-item .checkbox{
-    padding: 100px;
+    width:fit-content;
+    margin-bottom:0;
 }
-
+.order .plus,.minus{
+    width: 30px;
+    height: 30px;
+}
+.order .main-button{
+    /* flex-basis: 100%;
+    width: 60%; */
+    white-space: nowrap;
+}
 /* POLICY + BLOG-SAMPLE */
 .page-wrapper{
     padding: 20px 300px;
@@ -530,7 +594,8 @@ nav .nav-item{
 .contact-img img{
     width: 100%;
 }
-.contact-img .pattern{
+.pattern{
+    width: 100%;
     position:absolute;
     inset: 0;
 }
@@ -578,9 +643,167 @@ nav .nav-item{
 .follow-info i:hover{
     opacity: 0.7;
 }
+/* ABOUT demo*/
+.khung{
+    border-style: solid;
+    border-width: 8px 18px 18px 8px;
+    border-color: #2c160c;
+    border-radius: 30px;
+    background-color: #2c160c;
+    position: relative;
+    width: 70%;
+}
+
+.dinh-hung-image{
+    border-radius: 30px;
+    background-color: rgb(226, 15, 15);
+    object-fit: cover;
+    width: 100%;
+}
+
+.journey{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 3%;
+    margin-left: 3%;
+}
+.our-journey-list {
+    margin-bottom: 10%;
+    color: gray
+}
+.our-journey-list-icon {
+    width: 20px;
+    height: 20px;
+    margin-top: 2px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  gap: 10%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.col1{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 5%;
+}
+.row2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 25%;
+}
+.wave {
+  clip-path: polygon(
+    0% 10%, 10% 0%, 20% 10%, 30% 0%, 40% 10%, 
+    50% 0%, 60% 10%, 70% 0%, 80% 10%, 90% 0%, 
+    100% 10%, 100% 90%, 90% 100%, 80% 90%, 
+    70% 100%, 60% 90%, 50% 100%, 40% 90%, 
+    30% 100%, 20% 90%, 10% 100%, 0% 90%
+  );
+}
+/* ABOUT */
+.about{
+    padding: 20px;
+}
+.about h2{
+    font-size: 50px;
+    padding: 30px 0px;
+}
+.about-intro{
+    text-align: center;
+    padding-top: 100px;
+}
+.about-intro .about-title{
+    font-size: 100px;
+}
+.about-img-wrapper img{
+    width: 100%;
+    border-style: solid;
+    border-radius: var(--border-radius--border-radius);
+    border-width: 6px 16px 16px 6px;
+    border-color: var(--color--primary-2);
+}
+.journey-wrapper{
+    display: flex;
+    justify-content: flex-start;
+    gap:20px;
+    flex-wrap: wrap;
+}
+.journey-wrapper > *{
+    flex: 1;
+}
+.journey-tick{
+    display:flex;
+    flex-wrap: wrap;
+}
+.journey-tick > *{
+    flex-basis: 50%;
+}
+.tick-piece{
+    display: flex;
+    height: 50px;
+}
+.tick-piece .tick{
+    width: 20px;
+    height: 20px;
+}
+.stand-for{
+
+}
+.stand-for-img-wrapper{
+    position: relative;
+}
+.stand-for-wrapper{
+    display:flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.stand-for-characters{
+    flex-basis: 65%;
+    display:flex;
+    flex-wrap: wrap;
+    gap:40px;
+}
+.stand-for-character{
+    flex-basis: 40%;
+
+}
+.stand-for-img-wrapper{
+    flex-basis: 35%;
+}
+.stand-for-img{
+    width: 100%;
+}  
+.employees{
+    text-align: center;
+}
+.employees-wrapper{
+    display:flex;
+    flex:1;
+    gap:30px;
+    flex-wrap: wrap;
+} 
+.employee-img-wrapper img{
+    width:100%;
+    border-style: solid;
+    border-radius: var(--border-radius--border-radius);
+    border-width: 3px 8px 8px 3px;
+    border-color: var(--color--primary-2);
+}
+.employee-detail{
+    display:flex;
+    align-items: center;
+}
+.employee-detail .employee-role{
+    margin-left: auto;
+}
 /* FOOTER */
 footer{
-    background-color: var(--color--primary-1);
+    background-color: var(--color--footer);
     min-height: 500px;
     display:flex;
     flex:1;
@@ -610,7 +833,7 @@ footer .information .main-button{
     background-color: var(--color--primary-3);
 }
 .footer-contact .contact-title{
-    color:var(--color--white);
+    color:var(--color--footer-text);
     font-size:50px;
 }
 .footer-contact input{
@@ -619,7 +842,7 @@ footer .information .main-button{
     border-radius: var(--border-radius--border-radius);
 }
 .footer-contact .footer-contact-link{
-    color:var(--color--white);    
+    color:var(--color--footer-text);    
     display: block;
     padding-top: 20px;
     transition: all 0.3s ease;
@@ -641,10 +864,10 @@ footer .information .main-button{
     border-radius: 50%;
 }
 .footer-links{
-    color:var(--color--white);
+    color:var(--color--footer-text);
 }
 .footer-links-title{
-    color:var(--color--white);
+    color:var(--color--footer-text);
 }
 .footer-links-wrapper{
     flex-basis: 20%;
