--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,27 @@ body {
   font-family: var(--font-family--body);
   transition: background-color 0.5s ease;
 }
-/* a[data-theme="dark"] {
-  color: #ffffff;
-} */
-:root[data-theme="dark"] body{
-    /* color:white; */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 10;
+    display: none;
+}
+.overlay.active{
+    display: block;
+}
+.reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.6s ease;
+}
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
 }
 label{
     color:var(--color--black);
@@ -106,14 +122,21 @@ nav{
     display: flex;
     align-items: flex-start;
     transition: all 0.5s ease;
+    position: relative;
+    z-index: 50;
 }
 nav .nav-list{
     width: fit-content;
 }
 nav .nav-item{
     display:inline-block;
+    /* padding: 24px 20px; */
+}
+nav .nav-item .nav-link{
+    display: block; 
     padding: 24px 20px;
 }
+
 .intro-wrapper{
     max-width: 600px;
     margin:0 auto;
@@ -393,6 +416,9 @@ nav .nav-item{
     padding: 10px;
     margin-bottom: 20px;
 }
+.order input::placeholder{
+    color: var(--color--gray-1);
+}
 .order label{
     width:100%;
 }
@@ -413,10 +439,53 @@ nav .nav-item{
     height: 30px;
 }
 .order .main-button{
-    /* flex-basis: 100%;
-    width: 60%; */
-    white-space: nowrap;
+    width: 60%;
 }
+.order-button-wrapper{
+    margin: 40px 0px;
+    flex-basis: 100%;
+    text-align: center;
+}
+.order-success{
+    position: fixed;
+    background-color: var(--color--primary-1);
+    inset: 20%;
+    z-index: 2000;
+    /* display: none; */
+    text-align: center;
+    border-style: solid;
+    border-radius: var(--border-radius--border-radius);
+    border-color: var(--color--gray-2);
+    border-width: 3px 8px 8px 3px;
+    opacity: 0;
+    transform: translateY(85vh);
+    transition: all 0.4s ease;
+
+}
+.order-success .text-wrapper{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.order-success .success-title{
+    color:var(--color--gray-3);
+    padding-bottom: 20px;
+}
+.order-success.active{
+    display:block;
+    opacity: 1;
+    transform: translateY(0px);
+}
+.close-button{
+    color:var(--color--white);
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right:20px;
+    top:20px;
+}
+
 /* POLICY + BLOG-SAMPLE */
 .page-wrapper{
     padding: 20px 300px;
@@ -783,10 +852,12 @@ nav .nav-item{
 }
 .employees-wrapper{
     display:flex;
-    flex:1;
     gap:30px;
     flex-wrap: wrap;
 } 
+.employee{
+    flex:1;
+}
 .employee-img-wrapper img{
     width:100%;
     border-style: solid;
