--- a/css/responsive.css
+++ b/css/responsive.css
@@ -67,6 +67,9 @@
     .employee{
         flex-basis: 100%;
     }
+    .order{
+        padding: 0px 20px;
+    }
 
 }
 @media (min-width: 768px) and (max-width:1024px) {
